# kaavapino

./: .dockerignore  .gitignore  .rancher-pipeline.yaml  .travis.yml  010925_projektitiedot.xlsx  1.0_aikataulutiedot.xlsx  1.0_projektitiedot.xlsx  121125_projektitiedot.xlsx  200225_aikataulutiedot.xlsx  230925_projektitiedot.xlsx  Dockerfile  Dockerfile.production  Dockerfile_local_with_subscription  Dockerfile_unikie_dev_cluster  Dockerfile_with_subscription  README.md  azure-pipelines-master.yml  azure-pipelines-release.yml  bitbucket-pipelines.yml  conftest.py  docker-compose.yml  docker-entrypoint.sh  gulpfile.js  keydb.conf  louhi.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  test_251125_aikataulutiedot.xlsx  test_261125_aikataulutiedot.xlsx
.github/: copilot-instructions.md
.github/workflows/: unit_tests.yml
deploy/: containerize.sh  requirements.txt  server.sh  settings.py  uwsgi.ini
deploy/rancher/: deploy_staging_api.sh  deployment.yaml
kaavapino/: __init__.py  schema.py  settings.py  urls.py  views.py  wsgi.py
kaavapino/db_wrapper/: base.py
pipelines/: kaavapino-api-dev.yml  kaavapino-api-release.yml  kaavapino-api-review.yml
plans/: apps.py
projects/: __init__.py  admin.py  apps.py  clamav.py  deadline_utils.py  filters.py  forms.py  helpers.py  tasks.py  urls.py  validators.py  views.py  widgets.py
projects/actions/: verbs.py
projects/exporting/: __init__.py  document.py  report.py
projects/importers/: attribute.py
projects/importing/: __init__.py  attribute.py  deadline.py  project.py  report.py
projects/migrations/: 0001_initial.py  0002_add_document_template.py  0003_change_slugs_to_identifiers.py  0004_add_geometry_field_to_project.py  0005_add_identifier_to_project.py  0006_add_fields_to_attributes.py  0007_increase_choice_identifier_length.py  0008_add_phase_to_project.py  0009_two_attribute_string_types.py  0010_add_project_phase_section.py  0011_require_index_fields.py  0012_change_documents_relate_to_phases.py  0013_add_color_code_to_project_phase.py  0014_project_user.py  0015_add_help_text.py  0016_make_help_text_non_null.py  0017_add_project_attribute_image.py  0018_nonunique_indexes.py  0019_add_project_phase_log.py  0020_update_meta_and_attributedata.py  0021_add_relies_on.py  0022_alter_relies_on_related_name.py  0023_attribute_public.py  0024_add_matrix_attribute.py  0025_projecttype_metadata.py  0026_add_fieldset_attribute_type.py  0026_image_to_file_fields.py  0027_private_file.py  0028_move_required_and_generated_fields.py  0029_add_fieldset_attribute_type.py  0030_increase_filename_length.py  0031_add_project_subtype.py  0032_projectcomment.py  0033_private_document_template.py  0034_add_document_slug_field.py  0035_private_flag.py  0036_add_link_attribute.py  0036_report_reportattribute.py  0037_project_geometries.py  0037_report_is_admin_report.py  (+164 more)
projects/models/: __init__.py  attribute.py  deadline.py  document.py  helpers.py  project.py  projectcomment.py  report.py  (+1 more)
schema/: schema.yaml
sitecontent/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/: __init__.py  admin.py  apps.py  groups.py  helpers.py  models.py  serializers.py  urls.py  views.py
(+130 files in other folders)
