[tool.black]
py36 = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "kaavapino-api"
version = "0.0.1"
description = "Project management system for city planning projects."

authors = [
    "Helsingin Kaupunki"
]

readme = ["README", "LICENSE"]

[tool.poetry.dependencies]
# --no-binary psycopg2
python = ">=3.9.0,<3.11"
Django = "~3.2"
djangorestframework = "3.13.1"
django-helusers = "0.7.0"
django-environ = "0.4.5"
drf-extensions = "0.7.1"
drf-oidc-auth = "0.10.0"
psycopg2 = "2.9.5"
docxtpl = "0.15.1"
openpyxl = "3.0.9"
python-pptx = "0.6.21"
django-allauth = "0.47.0"
pillow = "8.4.0"
django-admin-sortable2 = "1.0.3"
django-private-storage = "3.0"
django-extended-choices = "1.3.3"
django-cors-headers = "3.10.1"
raven = "6.10.0"
sentry-sdk = "1.5.6"
django-activity-stream = "0.10.0"
django-jsonfield-compat = "0.4.4"
django-filter = "21.1"
djangorestframework-gis = "0.17"
social-auth-app-django = "5.0.0"
workalendar = "16.2.0"
django-q = "1.3.9"
croniter = "1.1.0"
numpy = "1.21.5"
elastic-apm = "6.8.1"
drf-spectacular = "0.21.1"
pyrsistent = "0.17.3"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
flake8-print = "4.0.0"
isort = "5.10.1"
ipython = "7.30.1"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-django = "4.5.2"
pytest-lazy-fixture = "0.6.3"
factory_boy = "3.2.1"
pytest-factoryboy = "2.1.0"
