[tool.black]
py36 = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "kaavapino-api"
version = "0.0.1"
description = "Project management system for city planning projects."

authors = [
    "Helsingin Kaupunki"
]

readme = ["README", "LICENSE"]

[tool.poetry.dependencies]
# --no-binary psycopg2
python = ">=3.9.0,<3.11"
Django = "~3.2"
djangorestframework = "3.13.1"
django-helusers = "0.12.0"
django-environ = "0.10.0"
drf-extensions = "0.7.1"
drf-oidc-auth = "0.10.0"
psycopg2 = "2.9.6"
docxtpl = "0.16.7"
openpyxl = "3.1.2"
python-pptx = "0.6.21"
django-allauth = "0.54.0"
pillow = "10.3.0"
django-admin-sortable2 = "1.0.4"
django-private-storage = "3.0"
django-extended-choices = "1.3.3"
django-cors-headers = "3.14.0"
raven = "6.10.0"
sentry-sdk = "1.22.2"
django-activity-stream = "1.4.2"
django-jsonfield-compat = "0.4.4"
django-filter = "23.2"
djangorestframework-gis = "1.0"
social-auth-app-django = "5.4.1"
workalendar = "17.0.0"
django-q = "1.3.9"
croniter = "1.3.14"
numpy = "1.24.3"
elastic-apm = "6.15.1"
drf-spectacular = "0.26.2"
pyrsistent = "0.19.3"
django-redis = "5.2.0"
django-db-connection-pool = "^1.2.4"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
flake8-print = "4.0.1"
isort = "5.12.0"
ipython = "8.10.0"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-django = "4.5.2"
pytest-lazy-fixture = "0.6.3"
factory_boy = "3.2.1"
pytest-factoryboy = "2.1.0"